# BDOMusicTool

./: .gitignore  README.md  install-linux.sh
Data/samples/: key_zones.json  loop_points.json
src/: CMakeLists.txt  app.c  app.h  app_icon.h  audio.c  audio.h  bdo_format.c  bdo_format.h  composer.desktop  composer.rc  get_samples.c  ice.c  ice.h  instruments.c  instruments.h  main.c  midi_import.c  midi_import.h  model.c  model.h  muse_format.c  muse_format.h  packed_codebooks.h  platform.h  sample_extract.c  sample_extract.h  ui.h  ui_piano_roll.c  ui_piano_roll.h  ui_render.c  ui_render.h  ui_toolbar.c  ui_toolbar.h  undo.c  undo.h  wem2ogg.c  wem2ogg.h
